@@ -1,3 +1,6 @@
+2009-07-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/largeobject.hxx:
+ - Fixed compile warnings on some 32-bit configurations.
 2009-06-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
  doc/libpqxx.xml:
  - Fixed mistake in tutorial example.  Thanks Patrick Daryll Glandien.
